--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -50,7 +50,7 @@ nav{
     box-shadow: 0 4px 8px 0 rgb(0, 0, 0), 0 6px 20px 0 black;
     box-sizing: border-box;}
    
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
     nav{size: 100%;
         display: block;
         padding: 5%;}
