--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -4,11 +4,11 @@ body{
 
 a:hover {color: #Ffb8d1}
 
-h1 {color: #a2d2ff}
+h1 {color: #1f79cd}
 
 nav {background-color: #E0e1e9 ;}
 
-nav a {color: #ff90b7}
+nav a {color: purple}
 
 nav a:hover {background-color: #Ddfdfe ;}
 
